  Version 3.44
  1. Patch from Kurt Jaeger to allow HTTP PUT even if the content length is unknown.
  2. Patch from Pavel merdin to fix a problem for one of the FireFox addons.
  3. Fixed issue in mod_perl & fastCGI environment of cookies returned from 
     CGI->cookie() leaking from one session to another.

  Version 3.43
  1. Documentation patch from MARKSTOS@cpan.org to replace all occurrences of
  "new CGI" with CGI->new()" to reflect best perl practices.
  2. Patch from Stepan Kasal to fix utf-8 related problems in perl 5.10

  Version 3.42
  1. Added patch from Renee Baecker that makes it possible to subclass
  CGI::Pretty.
  2. Added patch from Nicholas Clark to allow ~ characters in temporary directories.
  3. Added patch from Renee Baecker that fixes the inappropriate escaping of fields
     in multipart headers.

  Version 3.41
  1. Fix url() returning incorrect path when query string contains escaped newline.
  2. Added additional windows temporary directories and environment variables, courtesy patch from Renee Baecker
  3. Added a handle() method to the lightweight upload
  filehandles. This method returns a real IO::Handle object.
  4. Added patch from Tony Vanlingen to fix deep recursion warnings in CGI::Pretty.

  Version 3.40
  1. Fixed CGI::Fast docs to eliminate references to a "special"
  version of Perl.
  2. Makefile.PL now depends on FCGI so that CGI::Fast installs properly.
  3. Fix script_name() call from Stephane Chazelas.

  Version 3.39
  1. Fixed regression in "exists" function when using tied interface to CGI via $q->Vars.

  Version 3.38
  1. Fix annoying warning in http://rt.cpan.org/Ticket/Display.html?id=34551
  2. Added nobr() function http://rt.cpan.org/Ticket/Display.html?id=35377
  3. popup_menu() allows multiple items to be selected by default, satisfying
   http://rt.cpan.org/Ticket/Display.html?id=35376
  4. Patch from Renee Backer to avoid doubled <http-equiv> headers.