@@ -1,3 +1,7 @@
+  [BUG FIXES]
+  1. Pevent warnings about "uninitialized values" for REQUEST_URI and several other environment variables.
+     Patch by Callum Gibson and Mark Stosberg. (RT#24684)
+
   Version 3.44
   1. Patch from Kurt Jaeger to allow HTTP PUT even if the content length is unknown.
   2. Patch from Pavel merdin to fix a problem for one of the FireFox addons.
